# From-the-Ashes

./: CMakeLists.txt  Config.h.in
include/Graphics/: Color.hpp  Shader.hpp  VAO.hpp  Vertex.hpp  Window.hpp
include/System/: Window.hpp
resources/shaders/: default.frag  default.vert
src/: client.cpp  main.cpp
src/Graphics/: Shader.cpp  VAO.cpp  Window.cpp
src/System/: Window.cpp
